--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,24 @@
+/* ИМПОРТЫ ДОЛЖНЫ БЫТЬ САМЫМИ ПЕРВЫМИ */
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 @import "tailwindcss";
 
+@theme {
+  --font-roboto: "Roboto", sans-serif;
+}
+
+
+
+:root {
+  --bg-color: black;
+}
+
+body {
+  background-color: var(--bg-color);
+}
+
+@layer base {
+  html {
+    font-family: var(--font-roboto), serif;
+  }
+}
