Компонент создание тренировки

--- a/src/assets/elements/element-variables.scss
+++ b/src/assets/elements/element-variables.scss
@@ -9,7 +9,7 @@
   $input: (
     'text-color' : 'white',
     'bg-color': transparent,
-    'border-color': 'white',
+    'border-color': 'gray',
     'focus-border-color': #409eff,
     'active-bg-color' : #409eff,
     'border-radius': 8px,
